fixed tiny gap in between date-time container and location container in event details

--- a/react-app/src/components/Events/OneEvent/OneEvent.css
+++ b/react-app/src/components/Events/OneEvent/OneEvent.css
@@ -59,7 +59,7 @@
 .when-and-where-container {
     display: flex;
     flex-flow: column;
-    width: 75%;
+    width: 80%;
     justify-content: space-between;
 }
 
